--- a/HealthAppNutrition.vcxproj.filters
+++ b/HealthAppNutrition.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="ViewFoodListAction.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="ViewFoodDiaryAction.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="FoodItem.cpp">
@@ -99,6 +102,9 @@
       <Filter>Исходные файлы</Filter>
     </ClCompile>
     <ClCompile Include="ViewFoodListAction.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="ViewFoodDiaryAction.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
